# ort-run-onnx-demo

./: .gitignore  Cargo.toml  README.md  README_ZH.md
models/: download.bat
src/: logic.rs  main.rs
